# desktop.tapajosformaturas

./: index.html  package.json  pnpm-lock.yaml  shell.nix  tailwind.config.ts  vite.config.ts
src/: App.tsx  globals.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: contexts.rs  lib.rs  links.rs  main.rs
src/app/: links.tsx  settings.tsx
src/blocks/: actions.tsx  actionsHandlers.ts  header.tsx  settings.tsx
src/components/: app-sidebar.tsx  context-switcher.tsx  links-settings.tsx  nav-other.tsx  nav-user.tsx
src/components/blocks/: header.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  form.tsx  input.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  tooltip.tsx
src/lib/: alboom.ts  constants.ts  state.ts  types.ts
src/pages/: links.tsx  settings.tsx
