[package]
name = "desktop-tapajosformaturas"
version = "0.1.0"
description = ""
authors = ["<dreisss.dev@gmail.com> Davi Reis"]
edition = "2021"

[lib]
name = "desktop_tapajosformaturas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"

